2003-06-04  Richard Henderson  <rth@redhat.com>

        * sysdeps/unix/sysv/linux/alpha/gettimeofday.S: Fix typo in conversion.

        * include/libc-symbols.h (symbol_set_declare): Use arrays
        of unspecified size.

2003-06-04  Jakub Jelinek  <jakub@redhat.com>

	* config.make.in (ASFLAGS-config): New.
	* Makeconfig (ASFLAGS): Append $(ASFLAGS-config).
	* configure.in (libc_cv_as_noexecstack): New check.
	(ASFLAGS_config): Substitute.

2003-06-04  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/fpu/bits/mathinline.h (log1p, asinh, acosh, atanh,
	hypot, logb): Protect with #ifdef __FAST_MATH__.

2003-06-04  Thorsten Kukuk  <kukuk@suse.de>

	* sysdeps/i386/fpu/bits/mathinline.h (ldexpf, ldexpl): Protect with
	#ifdef __FAST_MATH__.

2003-06-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/glob.c [HAVE_D_TYPE] (glob_in_dir): Also allow
	DT_LNK entries if GLOB_ONLYDIR is set [PR libc/5043].
	* posix/globtest.sh: Adjust for this change.

	* sysdeps/unix/sysv/linux/ifaddrs.c (netlink_open): Call getsockname
	to get the actual PID value used in the records passed up.
	(getifaddrs): Don't initialize nh.pid here.

2003-06-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ifaddrs.c (netlink_receive): Minor
	optimization.

	* po/zh_CN.po: Update from translation team.

	* posix/getconf.c (main): Also recognize names without the
	_POSIX_ prefix.

	* elf/Makefile (CFLAGS-dl-lookup.c): Define.

2003-06-02  Bernd Schmidt  <bernds@redhat.com>

	* sysdeps/i386/fpu/bits/mathinline.h (sqrt, __sqrtl, ldexp,
	ldexpf, ldexpl): Only define if __FAST_MATH__.

2003-06-02  Richard C. Bilson  <rcbilson@plg.uwaterloo.ca>

	Replace hard-coded offsets into struct sigcontext with generated file.
	* sysdeps/unix/sysv/linux/ia64/sigcontext-offsets.sym: New file.
	* sysdeps/unix/sysv/linux/ia64/Makefile
	[$(subdir) = stdlib] (gen-as-const-headers): Add it.
	* sysdeps/unix/sysv/linux/ia64/ucontext_i.h: Include it instead of
	defining SC_* macros here.
